# mevrebels-protocol

./: .gitignore  Anchor.toml  BRAND.md  CLAUDE.md  DEVNET-DEPLOYMENT.md  HACKATHON_SUBMISSION.md  MEVrebels-execution-plan.md  MEVrebels-strategy.md  README.md  bounty-analysis.md  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: .env  .env.example  README.md  docker-compose.simple.yml  docker-compose.yml
backend/analytics/: .env.example  Dockerfile  README.md  config.py  database.py  event_parser.py  indexer.py  main.py  metrics.py  requirements.txt  webhook.py
backend/api-server/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend/api-server/src/: index.ts
backend/api-server/src/middleware/: error-handler.ts  rate-limiter.ts
backend/api-server/src/routes/: analytics.ts  leaderboard.ts  proposals.ts  strategies.ts
backend/api-server/src/services/: db.ts  redis.ts  websocket.ts
backend/api-server/src/types/: index.ts
backend/deployment/: create-vps-account.sh  deploy-nginx.sh  deploy.sh  nginx.conf
backend/migrations/: 001_init_schema.sql  002_seed_demo_data.sql  003_seed_demo_strategies.sql
backend/pool-monitor/: .env.example  Cargo.toml  Dockerfile  README.md
backend/pool-monitor/src/: config.rs  main.rs  opportunity.rs  publisher.rs  types.rs
backend/pool-monitor/src/dex/: meteora.rs  mod.rs  orca.rs  raydium.rs
backend/tests/: integration-test.sh
backend/transaction-monitor/: .env.example  Cargo.toml  Dockerfile  README.md
backend/transaction-monitor/src/: config.rs  database.rs  main.rs  parser.rs  types.rs  webhook.rs
dashboard/: .dockerignore  .env.example  .npmrc  DEMO-READY.md  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/.github/workflows/: deploy.yml
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/api-docs/: layout.tsx  page.tsx
dashboard/src/app/governance/: page.tsx
dashboard/src/app/pitch-deck/: layout.tsx  page.tsx
dashboard/src/app/strategies/: page.tsx
dashboard/src/components/: FloatingActionButton.tsx
dashboard/src/data/: mockProposals.ts  mockStrategies.ts
dashboard/src/lib/: api.ts
dashboard/src/types/: proposal.ts  strategy.ts
docs/: DEMO.md  INDEX.md  MEVrebels-PRD.md  PRODUCTION-TEST-REPORT.md  SECURITY_INCIDENT_REMEDIATION.md  TEST_RESULTS.md
docs/code-review/: PR-4-REVIEW-ANALYSIS.md
docs/dashboard/: README.md
docs/deployment/: BACKEND-DEPLOYMENT.md  DEPLOYMENT.md  DNS-SETUP.md
docs/planning/: MEVrebels-execution-plan.md  bounty-original.md
docs/programs/: execution-engine.md  programs-overview.md
docs/status/: STATUS-UPDATE.md
docs/submission/: HACKATHON_SUBMISSION.md
docs/testing/: MANUAL_TESTING_GUIDE.md
programs/dao-governance/: Cargo.toml
programs/dao-governance/src/: constants.rs  error.rs  lib.rs
programs/dao-governance/src/instructions/: cast_vote.rs  create_proposal.rs  deposit_treasury.rs  execute_proposal.rs  initialize.rs  mod.rs
programs/dao-governance/src/state/: governance_config.rs  mod.rs  proposal.rs  treasury.rs  vote_record.rs
programs/execution-engine/: Cargo.toml
programs/execution-engine/src/: constants.rs  error.rs  lib.rs
programs/execution-engine/src/instructions/: execute_strategy.rs  initialize_vault.rs  mod.rs
programs/execution-engine/src/state/: execution_vault.rs  mod.rs  profit_config.rs
programs/flash-loan/: Cargo.toml
programs/flash-loan/src/: constants.rs  error.rs  lib.rs  state.rs
programs/flash-loan/src/instructions/: deposit_liquidity.rs  flash_borrow.rs  flash_repay.rs  initialize_pool.rs  mod.rs
programs/strategy-registry/: Cargo.toml
programs/strategy-registry/src/: constants.rs  error.rs  lib.rs
resources/: RESOURCES.md
scripts/: initialize-devnet.ts
test-archives/: final-test-results.txt  test-final-summary.txt  test-output-fixed.txt  test-output.txt  test-results-fixed.txt  test-results-full.txt  test-summary.txt
tests/: dao-governance.ts  dao-integration.ts  execution-engine.ts  flash-loan.ts  mevrebels.ts  strategy-registry.ts
tests/utils/: wsol.ts
(+15 files in other folders)
