[workspace]
# Empty workspace section to prevent inheriting from parent

[package]
name = "mevrebels-pool-monitor"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Solana
solana-client = "1.17"
solana-sdk = "1.17"
anchor-client = "0.29"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"

# Utilities
chrono = "0.4"
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
