[workspace]
# Empty workspace section to prevent inheriting from parent

[package]
name = "mevrebels-transaction-monitor"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
anchor-client = "0.30"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
