[package]
name = "dao-governance"
version = "0.1.0"
description = "MEVrebels DAO Governance - Democratizing MEV through token-weighted voting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_governance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
strategy-registry = { path = "../strategy-registry", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
