[package]
name = "execution-engine"
version = "0.1.0"
description = "MEVrebels Execution Engine - Atomic arbitrage with mock flashloans"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "execution_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
strategy-registry = { path = "../strategy-registry", features = ["cpi"] }
dao-governance = { path = "../dao-governance", features = ["cpi"] }
flash-loan = { path = "../flash-loan", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
