[package]
name = "flash-loan"
version = "0.1.0"
description = "MEVrebels Flash Loan Protocol - Composable flash loans with reverse-callback pattern"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_loan"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
